Fix author left spacing when DOM differs

--- a/_sass/text.scss
+++ b/_sass/text.scss
@@ -122,9 +122,9 @@ h3 > a:hover {
   color: inherit;
 }
 
-h2 > author,
-h3 > author,
-h4 > author {
+h2 author,
+h3 author,
+h4 author {
   margin-left: 16px;
   font-size: 80%;
   font-weight: 400;
